# carbon_dash

./: .gitignore  AGENTS.md  DESCRIPTION  LICENSE  MANIFEST.in  NAMESPACE  Project.toml  README.md  _test_gallery.py  _validate_init.py  clean_gallery.py  dash_prop_typing.py  fix_docs_icons.js  fix_generate.js  index.html  package-lock.json  package.json  parse_test.js  patch_docs.js  patch_docs_2.js  patch_generate.js  pyproject.toml  requirements.txt  setup.py  test_app_table.py  usage.py  usage_button.py  webpack.config.js
R/: aILabel.R  aILabelActions.R  aILabelContent.R  aISkeleton.R  aISkeletonIcon.R  aISkeletonPlaceholder.R  aISkeletonText.R  accordion.R  accordionItem.R  accordionSkeleton.R  actionableNotification.R  aspectRatio.R  badgeIndicator.R  breadcrumb.R  breadcrumbItem.R  breadcrumbSkeleton.R  button.R  buttonKinds.R  buttonSet.R  buttonSizes.R  buttonSkeleton.R  buttonTooltipAlignments.R  buttonTooltipPositions.R  callout.R  carbonDash.R  chatButton.R  chatButtonSkeleton.R  checkbox.R  checkboxGroup.R  checkboxSkeleton.R  classPrefix.R  clickableTile.R  codeSnippet.R  codeSnippetSkeleton.R  column.R  columnHang.R  comboBox.R  comboButton.R  composedModal.R  composedModalPresence.R  (+252 more)
carbon_dash/: AILabel.py  AILabelActions.py  AILabelContent.py  AISkeletonIcon.py  AISkeletonPlaceholder.py  AISkeletonText.py  Accordion.py  AccordionItem.py  AccordionSkeleton.py  ActionableNotification.py  AlluvialChart.py  AreaChart.py  AspectRatio.py  BoxplotChart.py  Breadcrumb.py  BreadcrumbItem.py  BreadcrumbSkeleton.py  BubbleChart.py  BulletChart.py  Button.py  (+811 more)
(+1306 files in other folders)
