[build-system]
requires = ["setuptools>=61.0", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "carbon-dash-components"
version = "0.0.1"
description = "Carbon React Components wrapped for Dash"
readme = "README.md"
authors = [{name = "Laxman Bablani", email = "laxman@bablani.org"}]
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = ["Framework :: Dash"]
dependencies = ["dash>=2.0.0"]

[project.urls]
Homepage = "https://github.com/laxmanbablani/carbon_dash"
Repository = "https://github.com/laxmanbablani/carbon_dash"

[tool.setuptools]
packages = ["carbon_dash_components"]
include-package-data = true
